# Bootcamp-Python

./: .gitignore  README.MD  pyproject.toml
Aula 01/: main.py
Aula 04/: ordem.py
Aula 05/: README.md
Aula 07/: desafio_com_pandas.py  pyproject.toml
Aula 08/: dados.parquet  pipeline.py
Aula 09/: dados.parquet  etl.py  pyproject.toml
Aula 10/01 - basico/: class.py
Aula 10/02 - encapsulamento/: postgre.py
Aula 10/03 - herança/: etl.py
Aula 11/: README.md  exemplo.txt
Aula 11/01 - basico/: exemplo.csv  funcional.py
Aula 12/: csv_test.py
Aula 12/data/: exemplo.csv
Aula 12/src/: abstract.py  csv_source.py  main.py
Aula 13/: main.py
Aula 13/data/csv_files/: teste.csv  teste_2.csv
Aula 13/src/: file_source.py  main.py
Aula 19/: test.db
